--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/gradient_background">
+    android:gravity="center"
+    android:background="@drawable/gradient_background"
+    android:orientation="vertical">
 
+    <!-- Logo -->
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/github"
+        android:outlineSpotShadowColor="@color/black"
+        android:contentDescription="Logo" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Title -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SMART PARKING"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/fzoppinsbold"
+        android:outlineSpotShadowColor="@color/black"
+        />
+
+    <!-- Admin Button -->
+    <Button
+        android:id="@+id/btnAdmin"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
+        android:text="ADMIN"
+        android:outlineSpotShadowColor="@color/black"
+        android:textSize="18sp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/green_leaf"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/fzoppinsbold"/>
+
+    <!-- Guest Button -->
+    <Button
+        android:id="@+id/btnGuest"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
+        android:text="GUEST"
+        android:outlineSpotShadowColor="@color/black"
+        android:textSize="18sp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/green_leaf"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/fzoppinsbold"/>
+
+</LinearLayout>
